fixed spacing bugs

--- a/src/About.scss
+++ b/src/About.scss
@@ -1,97 +1,97 @@
 .about {
-    padding: 8rem;
-  
-    .about-content {
-      display: flex;
-      flex-wrap: column;
-      gap: 5rem;
+  padding: 8rem;
 
-      @media (max-width: 900px) {
-        gap: 2rem;
+  .about-content {
+    display: flex;
+    flex-wrap: column;
+    gap: 5rem;
+
+    @media (max-width: 900px) {
+      gap: 2rem;
+    }
+  }
+
+  .img-about {
+    background-position: 50%;
+    background-size: cover;
+    border: 3px solid var(--border2);
+    border-radius: 25%;
+    height: 425px;
+    width: 430px;
+
+    @media (max-width: 900px) {
+      height: 332px;
+      width: 324px;
+    }
+  }
+
+  .text-about {
+    display: flex;
+    flex-direction: column;
+    font-family: poppins, sans-serif;
+    color: var(--text-color);
+    width: 100%;
+
+    @keyframes typing {
+      from {
+        width: 0;
+      }
+      to {
+        width: 100%;
       }
     }
-  
-    .img-about {
-      background-position: 50%;
-      background-size: cover;
-      border: 3px solid var(--border2);
-      border-radius: 25%;
-      height: 425px;
-      width: 430px;
 
-      @media (max-width: 900px) {
-        height: 332px;
-        width: 324px;
+    @keyframes blink-caret {
+      from, to {
+        border-color: transparent;
       }
-    }
-  
-    .text-about {
-      display: flex;
-      flex-direction: column;
-      font-family: poppins, sans-serif;
-      color: var(--text-color);
-      width: 100%;
-  
-      @keyframes typing {
-        from {
-          width: 0;
-        }
-        to {
-          width: 100%;
-        }
-      }
-  
-      @keyframes blink-caret {
-        from, to {
-          border-color: transparent;
-        }
-        50% {
-          border-color: transparent;
-        }
+      50% {
+        border-color: transparent;
       }
     }
   }
-  
+}
+
+.text-title {
+  font-size: 25px;
+  font-weight: 500;
+  text-decoration: none;
+  font-family: poppins, sans-serif;
+  color: rgb(49, 181, 225);
+  padding-top: 6rem;
+  overflow: hidden;
+  border-right: .15em solid;
+  white-space: nowrap;
+  margin: 0 auto;
+  animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
+}
+
+@media (max-width: 900px) {
+  .about-content {
+    flex-direction: column;
+    align-items: center;
+  }
+
   .text-title {
-    font-size: 25px;
-    font-weight: 500;
-    text-decoration: none;
-    font-family: poppins, sans-serif;
-    color: rgb(49, 181, 225);
-    padding-top: 6rem;
-    overflow: hidden;
-    border-right: .15em solid;
-    white-space: nowrap;
-    margin: 0 auto;
-    animation: typing 3.5s steps(40, end), blink-caret .75s step-end infinite;
-  } 
+    padding-top: 0;
+    border-right: 0;
+    text-align: center;
+  }
 
-  @media (max-width: 900px) {
-    .about-content {
-      flex-direction: column;
-      align-items: center;
-    }
+  .img-about {
+    margin-bottom: 2rem;
+  }
 
-    .text-title {
-      padding-top: 0;
-      border-right: 0;
-      text-align: center;
-    }
-
-    .img-about {
-      margin-bottom: 2rem;
-    } 
-    
-    .text-about {
-      text-align: center;
-    }
-    p {
-      padding: 0;
-    }
+  .text-about {
+    text-align: center;
+  }
+  p {
+    padding: 0;
+  }
 }
 
 @media (max-width: 900px) {
   .about {
-    padding: 8rem 2rem 8rem 2rem;
+    padding: 8rem 2rem;
   }
 }
